...
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".locationreminders.RemindersActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
...
